--- a/.github/workflows/backend_prod_deploy.yml
+++ b/.github/workflows/backend_prod_deploy.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
       - name: Checkout project sources
         uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+      # - name: Login to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
+      #     password: ${{ secrets.DOCKER_HUB_PASSWORD }}
       - name: Get current Git tag
         id: get_tag
         run: echo "TAG=$(git describe --tags)" >> $GITHUB_ENV
@@ -24,4 +24,4 @@ jobs:
       - name: Run build with Gradle Wrapper
         env:
           VERSION: ${{ env.TAG }}
-        run: cd backend && gradle jib --image vovochkastelmashchuk/nest2d
+        #run: cd backend && gradle jib --image vovochkastelmashchuk/nest2d
